[package]
name = "sastopo_xml2svg"
version = "0.0.1"
authors = ["Rob Johnston <rob.johnston@joyent.com>"]
license = "MIT"

[dependencies]
getopts = "0.2"
log = "*"
nvpair = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "*"
serde-xml-rs = "0.3.1"
svg = "0.5.12"
topo_digraph_xml = { git = "https://github.com/joyent/topo-digraph-xml" }
